--- a/public/index.css
+++ b/public/index.css
@@ -139,49 +139,43 @@ div.ui.button {
 /* 	margin:20px !important; */
 /* } */
 
-.ui.table.pricing {
-	margin-left: auto !important;
-	margin-right: auto !important;
- 	width: 90% !important;
- 	box-shadow: 0px 15px 45px rgba(0,0,0,0.2);
- 	border:0px !important;
- 	margin-top:50px;
- 	margin-bottom:50px;
-}
+/* .ui.table.pricing { */
+/* 	margin-left: auto !important; */
+/* 	margin-right: auto !important; */
+/*  	width: 90% !important; */
+/*  	box-shadow: 0px 15px 45px rgba(0,0,0,0.2); */
+/*  	border:0px !important; */
+/*  	margin-top:50px; */
+/*  	margin-bottom:50px; */
+/* } */
 
-.ui.table.pricing th {
-	color: white;
-	border: none;
-	font-weight: 500;
-	text-transform: uppercase;
-	font-size: 0.9em;
-	background-color:rgba(255, 48, 15, 0.85);
-	border:none !important;
-}
+/* .ui.table.pricing th { */
+/* 	color: white; */
+/* 	border: none; */
+/* 	font-weight: 500; */
+/* 	text-transform: uppercase; */
+/* 	font-size: 0.9em; */
+/* 	background-color:rgba(255, 48, 15, 0.85); */
+/* 	border:none !important; */
+/* } */
 
-.ui.table.pricing tbody tr td:first-child {
-	color: white;
-	border: none;
-	font-weight: 600;
-	text-transform: uppercase;
-	font-size: 0.9em;
-	background-color:rgba(255, 48, 15, 0.85);
-	border:none !important;
-}
+/* .ui.table.pricing tbody tr td:first-child { */
+/* 	color: white; */
+/* 	border: none; */
+/* 	font-weight: 600; */
+/* 	text-transform: uppercase; */
+/* 	font-size: 0.9em; */
+/* 	background-color:rgba(255, 48, 15, 0.85); */
+/* 	border:none !important; */
+/* } */
 
-.ui.header:first-child {
-	margin-top:inherit !important;
-}
+/* .ui.header:first-child { */
+/* 	margin-top:inherit !important; */
+/* } */
 
-.ui.transparent.segment {
+.ui.transparent {
     background-color: transparent;
 }
-
-[name*=EMAIL] {
-    max-width: 550px;
-    margin-top: 20px; !important
-}
-
 
 .font-white {
     color: white
