trying out smaller hero bg image

--- a/public/index.css
+++ b/public/index.css
@@ -51,7 +51,7 @@ div.ui.button {
 }
 
 .hero {
-	background-image:url(explore6.png);
+	background-image:url(hero.jpg);
 	background-color:#333;
 	background-repeat:no-repeat;
 	box-shadow:inset 0px 0px 25vh 0px rgba(0,0,0,1) !important;
