--- a/public/index.css
+++ b/public/index.css
@@ -94,6 +94,10 @@ div.ui.button {
 		min-width:50vw;
 	}
 
+  .hero > .hero-subheader {
+      margin-bottom: 75px;
+  }
+
 	.hero > div > div.ui.action > input {
 		background-color:rgba(255,255,255,0.85) !important;
 	}
@@ -188,4 +192,20 @@ footer {
 
 .content {
     margin-top: 20px;
+}
+
+.text-centered {
+    text-align: center;
+}
+
+.lang-img {
+    position: absolute;
+    width: 20%;
+    z-index: 1;
+    left: 69%;
+    top: 50%;
+}
+
+.tint-screenshot {
+    box-shadow: 0px 0px 35px rgba(0,0,0,0.1);
 }
