add more fun images and text

--- a/public/index.css
+++ b/public/index.css
@@ -213,3 +213,8 @@ footer {
 .faq {
     margin-top: 20px;
 }
+
+.use-js {
+    margin-top: 80px !important;
+    margin-bottom: 60px !important;
+}
